add browser support via umd pattern

--- a/.jshintrc
+++ b/.jshintrc
@@ -11,5 +11,9 @@
   "boss": true,
   "eqnull": true,
   "node": true,
-  "es5": true
+  "es5": true,
+  "globals": {
+    "define": false,
+    "window": false
+  }
 }
